--- a/.github/workflows/py-black.yaml
+++ b/.github/workflows/py-black.yaml
@@ -1,8 +1,9 @@
 name: Binary search - Formatting (black)
 
 on:
-  workflow_dispatch: {}
-
+  push:
+    branches:
+    
 jobs:
   py-black:
     name: Binary search - Formatting (black)
